# sirochatora

./: README.md  main.py  model_downloader.py  pyproject.toml  test_data_gen.py
libs/sirochatora/: sirochatora.py
libs/sirochatora/rag/: rag.py
libs/sirochatora/util/: siroutil.py
src/sirochatora/: sirochatora.py
src/sirochatora/embedding/: embeddings.py
src/sirochatora/rag/: rag.py
