[project]
name = "sirochatora"
version = "20250730"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.10",
    "faiss-cpu>=1.11.0",
    "gitpython>=3.1.44",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-cohere>=0.4.4",
    "langchain-community>=0.3.24",
    "langchain-huggingface>=0.2.0",
    "langchain-mcp-adapters>=0.1.1",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.18",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.4.8",
    "loguru>=0.7.3",
    "nest-asyncio>=1.6.0",
    "ragas>=0.2.15",
    "rank-bm25>=0.2.2",
    "tavily-python>=0.7.3",
    "unstructured>=0.17.2",
]
